--- a/G4101_lab3_estadistica_descriptiva2.Rmd
+++ b/G4101_lab3_estadistica_descriptiva2.Rmd
@@ -2,10 +2,12 @@
 title: "Lab 3: Estadistica Descriptiva 2"
 author: "Maximiliano Garnier Villarreal"
 output:
-  html_notebook:
-    highlight: pygments
+  html_document:
+    df_print: paged
+    highlight: textmate
+    keep_md: yes
     number_sections: yes
-    theme: flatly
+    theme: spacelab
     toc: yes
   word_document:
     toc: yes
@@ -14,12 +16,10 @@ output:
     keep_tex: yes
     number_sections: yes
     toc: yes
-  html_document:
-    df_print: paged
-    highlight: textmate
-    keep_md: yes
+  html_notebook:
+    highlight: pygments
     number_sections: yes
-    theme: spacelab
+    theme: flatly
     toc: yes
 always_allow_html: yes
 ---
@@ -32,122 +32,196 @@ library(janitor)
 library(highcharter)
 library(tidymodels)
 library(tidyverse)
+library(easystats)
 library(rio)
 
-mytheme = theme(panel.grid.major = element_blank(),
-                panel.grid.minor = element_blank(),
-                panel.background = element_blank(),
-                axis.line = element_line(color = "black"),
-                legend.key = element_rect(fill = "white"))
+theme_set(theme_minimal(base_size = 12))
+
+knitr::opts_chunk$set(
+  echo = TRUE,
+  message = FALSE,
+  warning = FALSE,
+  error = FALSE,
+  # fig.path = "figs/",
+  fig.retina = 3,
+  fig.width = 8,
+  fig.asp = 0.618,
+  fig.align = "center",
+  out.width = "90%"
+)
 ```
 
 
-Aqui estoy generando dos set de datos aleatorios (x,y), y pesos aleatorios para luego usarlos en los calculos.
+Vamos a usar los datos de `airquality`.
 
 ```{r}
-set.seed(10)
-x = rnorm(100, mean=50, sd=5)
-y = 20 * x + rnorm(100, mean=50, sd=40) + 10
-w = floor(runif(100,min=5,max=10)) # crea 100 valores aleatorios y los redondea para abajo
+airq = airquality %>% 
+  as_tibble() %>% 
+  mutate(Month = as_factor(Month),
+         Day = as_factor(Day)) %>% 
+  sjmisc::std_if(is.numeric) %>% 
+  # sjmisc::center_if(is.numeric)
+  mutate(across(.cols = where(is.numeric) & !ends_with(c('_z')),
+                # .cols = 1:4,
+                .fns = ~ .x - mean(.x, na.rm = T),
+                .names = '{.col}_c'))
+airq
 
-DF = tibble(x,y,w)
-DF
+airq2 = airq %>% 
+  select(where(is.numeric) & !ends_with(c('_c','_z')))
+airq2
 ```
 
 ## Bivariable
 
-Las funciones covarianza (`cov`) y correlacion (`cor`) pueden actual sobre vectors o sobre DataFrames. En estos ultimos el resultado va a ser una matriz de covarianza o correlacion.
+Las funciones covarianza (`cov`) y correlacion (`cor`) pueden actuar sobre vectores o sobre DataFrames. En estos ultimos el resultado va a ser una matriz de covarianza o correlacion, en su mayoria se requiere que el DataFrame sea numerico, sin columnas de texto o factores.
 
 ```{r}
-cov(x,y) # covarianza
-cor(x,y,method = "pearson") # coeficiente de correlacion de Pearson
-cor(x,y,method = "spearman") # coeficiente de correlacion de Spearman
+x = airq$Solar.R
+y = airq$Temp
 
-cov(DF) # matriz de varianza-covarianza
-cor(DF) # matriz de coeficientes de correlacion
+cov(x,y,use = 'pairwise.complete.obs') # covarianza
+cor(x,y,method = "pearson",
+    use = 'pairwise.complete.obs') # coeficiente de correlacion de Pearson
 
-GGally::ggcorr(DF, label = T) # grafico estatico de coeficientes de correlacion
+cov(airq2, use = 'pairwise.complete.obs') # matriz de varianza-covarianza
+cor(airq2, use = 'pairwise.complete.obs') # matriz de correlacion de Pearson
+
+corrr::correlate(airq2, diagonal = 1, 
+                 method = 'pearson')
+
+correlation(airq2, method = 'pearson')
+
+# grafico estatico de coeficientes de correlacion
+
+GGally::ggcorr(airq2, label = T,
+               label_round = 2,
+               label_size = 4,
+               method = c('pairwise.complete.obs','pearson')) 
+
+ggstatsplot::ggcorrmat(airq2)
 ```
 
 El siguiente codigo genera un grafico interactivo de la matriz de correlacion (Solo se despliega en formato HTML).
 
 ```{r eval=knitr::is_html_output()}
-hchart(cor(DF)) # grafico interactivo de coeficientes de correlacion
+hchart(cor(airq2,use = 'pairwise.complete.obs')) # grafico interactivo de coeficientes de correlacion
 ```
 
 ## Regresion
 
-Para presentar caracteristicas de los modelos de forma mas estetica y ordenada se usan las funciones `tidy` y `glance` del paquete *broom*. `tidy` genera la tabla resumen de los coeficientes y sus estadisticas y `glance` genera una tabla con medidas de ajuste, incluyendo el $R^2$.
+Para presentar caracteristicas de los modelos de forma mas estetica y ordenada se pueden usar las funciones `tidy` y `glance` del paquete *broom*, o `model_parameter` y `model_performance` de los paquetes *parameters* y *performance*. `tidy` y `model_parameter` genera la tabla resumen de los coeficientes y sus estadisticas, mientras que `glance` y `model_performance` genera una tabla con medidas de ajuste, incluyendo el $R^2$.
+
+### Relacion entre correlacion y regresion simple
+
+```{r}
+lm(Temp_z ~ Wind_z, data = airq) %>% tidy()
+
+lm(Temp ~ Wind, data = airq) %>% 
+  standardize_parameters(method = 'refit')
+
+with(airq, cor(Temp_z, Wind_z))
+```
+
 
 ### Lineal
 
-$y \thicksim \hat{b}_0 + x\hat{b}_1 + \epsilon$
+$y \thicksim \hat{b}_0 + \hat{b}_1x + \epsilon$
 
 ```{r}
-mod1 = lm(y~x, data = DF) # modelo de regresion lineal
-coef = mod1$coefficients # obtiene los coeficientes del modelo de regresion
+mod1 = lm(Temp ~ Solar.R, data = airq) # modelo de regresion lineal
+
 mod1 %>% tidy()
+mod1 %>% model_parameters()
+
 mod1 %>% glance()
-summary(mod1) # resumen del modelo
-sjstats::rmse(mod1) # rmse
+mod1 %>% model_performance()
+
 sjstats::cv(mod1) # cv
-performance::r2(mod1) # R2
-plot(mod1) # graficos diagnostico
+
+# graficos diagnostico
+# plot(mod1) # graficos diagnostico
+check_model(mod1,panel=F)
 ```
 
 ### Cuadratica
 
-$y \thicksim \hat{b}_0 + x\hat{b}_1 + x^2\hat{b}_2 + \epsilon$
+$y \thicksim \hat{b}_0 + \hat{b}_1x + \hat{b}_2x^2 + \epsilon$
 
 ```{r}
-mod2 = lm(y~x+I(x^2), data = DF) # modelo de regresion cuadratica
-coef2 = mod2$coefficients
+mod2 = lm(Temp ~ Solar.R + I(Solar.R^2), data = airq) # modelo de regresion cuadratica
+
 mod2 %>% tidy()
+mod2 %>% model_parameters()
+
 mod2 %>% glance()
-summary(mod2) # resumen del modelo
-sjstats::rmse(mod2) # rmse
+mod2 %>% model_performance()
+
 sjstats::cv(mod2) # cv
-performance::r2(mod2) # R2
-plot(mod2) # graficos diagnostico
+
+# graficos diagnostico
+# plot(mod2) 
+check_model(mod2,panel=F)
 ```
 
 ### Compara modelos
+
 ```{r}
-DescTools::TMod(mod1,mod2)
+TMod(mod1,mod2) # DescTools
+
+modelsummary::modelsummary(list(Lineal=mod1,Cuadratico=mod2),
+                           statistic = NULL, # 'conf.int',
+                           coef_omit = NULL, # 'Int'
+                           stars = F,
+                           fmt = 4)
+
+sjPlot::tab_model(mod1,mod2,
+                  title = 'Comparasion de modelos',
+                  show.std = NULL, # 'std', NULL
+                  show.intercept = T,
+                  show.ci = F, # .95
+                  collapse.ci = F,
+                  ci.hyphen = ' , ',
+                  show.stat = F,
+                  show.p = F,
+                  show.aic = T,
+                  dv.labels = c('Lineal','Cuadrático'),
+                  digits = 4)
+
+comp.mods = compare_performance(mod1,mod2,rank = T) # performance
+comp.mods
+plot(comp.mods)
 ```
 
-### Graficos
+## Graficos
 
 Para agregar lineas de tendencia en *ggplot2* se usa la funcion `geom_smooth`. Por defecto ajusta una curva loess, pero para cambiarlo se usa `method = 'lm'`, y para especificar una ecuacion diferente a la regresion simple se usa `formula`, donde `y` y `x` son genericos, **NO** hay que poner el nombre de las variables que se esta graficando.
 
 ```{r}
-ggplot(DF, aes(x,y)) + 
-  geom_point() + 
-  mytheme
+ggplot(airq, aes(Solar.R,Temp)) + 
+  geom_point()
 
-ggplot(DF, aes(x,y)) + 
+ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
-  geom_smooth() + 
-  mytheme
+  geom_smooth()
 
 # grafico regresion lineal
-ggplot(DF, aes(x,y)) + 
+ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
-  geom_smooth(method = 'lm') + 
-  mytheme
+  geom_smooth(method = 'lm')
 
 # grafico regresion cuadratica
-ggplot(DF, aes(x,y)) + 
+ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
-  geom_smooth(method = 'lm', formula = y~poly(x, 2)) + 
-  mytheme
+  geom_smooth(method = 'lm', formula = y~poly(x, 2))
 
 # grafico regresion lineal y cuadratica
-ggplot(DF, aes(x,y)) + 
+ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
   geom_smooth(method = 'lm', aes(col='Lineal')) + 
-  geom_smooth(method = 'lm', formula = y~poly(x, 2), aes(col='Cuadratica')) + 
-  mytheme
+  geom_smooth(method = 'lm', aes(col='Cuadratico'), 
+              formula = y~poly(x, 2)) +
+  scale_color_brewer('Modelo',palette = 'Dark2')
 ```
 
 
