--- a/G4101_lab3_estadistica_descriptiva2.Rmd
+++ b/G4101_lab3_estadistica_descriptiva2.Rmd
@@ -9,33 +9,67 @@ output:
     number_sections: yes
     theme: spacelab
     toc: yes
-  word_document:
-    toc: yes
   pdf_document:
     df_print: kable
     keep_tex: yes
     number_sections: yes
     toc: yes
   html_notebook:
+    df_print: paged
     highlight: pygments
     number_sections: yes
     theme: flatly
     toc: yes
+  word_document:
+    df_print: kable
+    number_sections: yes
+    toc: yes
 always_allow_html: yes
 ---
 
-# Estadistica descriptiva
+# Estadistica descriptiva bivariable
 
 ```{r setup, include=FALSE, warning=F, message=FALSE}
+library(flextable)
+library(kableExtra)
+library(gtsummary)
 library(DescTools)
 library(janitor)
 library(highcharter)
+library(modelsummary)
 library(tidymodels)
 library(tidyverse)
 library(easystats)
 library(rio)
 
 theme_set(theme_minimal(base_size = 12))
+
+formato.salida = case_when(
+  knitr::is_html_output() ~ 'html',
+  knitr::is_latex_output() ~ 'latex',
+  T  ~ 'simple',
+)
+
+options(
+  knitr.table.format = formato.salida,
+  modelsummary_get = 'all'
+  # OutDec = ','
+  , digits = 3
+)
+
+set_flextable_defaults(
+  # decimal.mark = ',',
+  # big.mark = '.',
+  digits = 3
+)
+
+theme_gtsummary_language(
+  language = "es",
+  # decimal.mark = ',',
+  # big.mark = '.',
+  iqr.sep = NULL,
+  ci.sep = NULL
+)
 
 knitr::opts_chunk$set(
   echo = TRUE,
@@ -46,7 +80,7 @@ knitr::opts_chunk$set(
   fig.retina = 3,
   fig.width = 8,
   fig.asp = 0.618,
-  fig.align = "center",
+  # fig.align = "center",
   out.width = "90%"
 )
 ```
@@ -54,51 +88,75 @@ knitr::opts_chunk$set(
 
 Vamos a usar los datos de `airquality`.
 
-```{r}
+```{r datos}
 airq = airquality %>% 
   as_tibble() %>% 
   mutate(Month = as_factor(Month),
          Day = as_factor(Day)) %>% 
-  sjmisc::std_if(is.numeric) %>% 
+  # sjmisc::std_if(is.numeric) %>% 
   # sjmisc::center_if(is.numeric)
-  mutate(across(.cols = where(is.numeric) & !ends_with(c('_z')),
+  mutate(across(.cols = where(is.numeric),
                 # .cols = 1:4,
-                .fns = ~ .x - mean(.x, na.rm = T),
-                .names = '{.col}_c'))
-airq
+                .fns = list(c = center, z = standardize),
+                # .fns = ~ .x - mean(.x, na.rm = T),
+                # .names = '{.col}_c')
+                .names = '{.col}_{.fn}')
+                )
 
-airq2 = airq %>% 
-  select(where(is.numeric) & !ends_with(c('_c','_z')))
-airq2
+airq 
+# %>% head() %>% 
+#   flextable() %>%
+#   colformat_double(j = 7:14) %>%
+#   fit_to_width(max_width = 7)
 ```
 
-## Bivariable
+```{r datos-num}
+airq2 = airq %>% 
+  select(where(is.numeric) & !ends_with(c('_c','_z')))
+
+airq2 
+# %>% head() %>% flextable()
+```
+
+## Covarianza & Correlacion
 
 Las funciones covarianza (`cov`) y correlacion (`cor`) pueden actuar sobre vectores o sobre DataFrames. En estos ultimos el resultado va a ser una matriz de covarianza o correlacion, en su mayoria se requiere que el DataFrame sea numerico, sin columnas de texto o factores.
 
 ```{r}
 x = airq$Solar.R
 y = airq$Temp
+```
 
+```{r cov-cor}
 cov(x,y,use = 'pairwise.complete.obs') # covarianza
 cor(x,y,method = "pearson",
     use = 'pairwise.complete.obs') # coeficiente de correlacion de Pearson
+```
 
+```{r cov-cor-mat}
 cov(airq2, use = 'pairwise.complete.obs') # matriz de varianza-covarianza
 cor(airq2, use = 'pairwise.complete.obs') # matriz de correlacion de Pearson
+```
 
+```{r cor-tb}
 corrr::correlate(airq2, diagonal = 1, 
-                 method = 'pearson')
+                 method = 'pearson') 
+# %>% 
+#   flextable() %>% 
+#   colformat_double()
+```
 
-correlation(airq2, method = 'pearson')
+```{r cor-pairs}
+correlation(airq2, method = 'pearson') 
+# %>% 
+#   tibble() %>% 
+#   flextable() %>% 
+#   colformat_double()
+```
 
-# grafico estatico de coeficientes de correlacion
+Grafico estatico de coeficientes de correlacion
 
-GGally::ggcorr(airq2, label = T,
-               label_round = 2,
-               label_size = 4,
-               method = c('pairwise.complete.obs','pearson')) 
-
+```{r cor-mat-fig}
 ggstatsplot::ggcorrmat(airq2)
 ```
 
@@ -114,13 +172,31 @@ Para presentar caracteristicas de los modelos de forma mas estetica y ordenada s
 
 ### Relacion entre correlacion y regresion simple
 
-```{r}
-lm(Temp_z ~ Wind_z, data = airq) %>% tidy()
+En una regresion simple (y ~ x, un predictor) el coeficiente de correlacion (y covarianza) entre ambas variables va a ser igual a la pendiente de la regresion cuando se usan variables estandarizadas ($z \sim N(0,1)$) o se estandariza el modelo con las variables originales.
 
+Usando variables estandarizadas
+
+```{r cor-z-mod}
+lm(Temp_z ~ Wind_z, data = airq) %>% 
+  tidy() 
+# %>% 
+#   flextable() %>% 
+#   colformat_double()
+```
+
+Estandarizando el modelo con variables originales
+
+```{r cor-mod-z}
 lm(Temp ~ Wind, data = airq) %>% 
   standardize_parameters(method = 'refit')
+```
 
+Correlacion y covarianza entre variables estandarizadas
+
+```{r cor-cov-z}
 with(airq, cor(Temp_z, Wind_z))
+
+with(airq, cov(Temp_z, Wind_z))
 ```
 
 
@@ -128,19 +204,38 @@ with(airq, cor(Temp_z, Wind_z))
 
 $y \thicksim \hat{b}_0 + \hat{b}_1x + \epsilon$
 
-```{r}
+```{r mod-lin}
 mod1 = lm(Temp ~ Solar.R, data = airq) # modelo de regresion lineal
+```
 
+```{r mod-lin-param}
 mod1 %>% tidy()
 mod1 %>% model_parameters()
+```
 
+```{r mod-lin-fit}
 mod1 %>% glance()
 mod1 %>% model_performance()
+```
 
+```{r mod-lin-cv}
 sjstats::cv(mod1) # cv
+```
 
-# graficos diagnostico
-# plot(mod1) # graficos diagnostico
+```{r mod-lin-gts}
+tbl_regression(mod1,
+               estimate_fun = purrr::partial(style_sigfig, digits = 3),
+               pvalue_fun = ~papaja::printp(.x, digits = 3)) %>%
+  modify_header(list(label ~ "",estimate ~ "**Coeficiente**",
+                     p.value ~ "**valor-p**")) %>% 
+  add_glance_source_note(glance_fun = performance::model_performance,
+                         include = c(R2,R2_adjusted,RMSE,Sigma,AIC))
+```
+
+Graficos diagnostico
+
+```{r mod-check-1}
+# plot(mod1) 
 check_model(mod1,panel=F)
 ```
 
@@ -148,46 +243,74 @@ check_model(mod1,panel=F)
 
 $y \thicksim \hat{b}_0 + \hat{b}_1x + \hat{b}_2x^2 + \epsilon$
 
-```{r}
+```{r mod-cuad}
 mod2 = lm(Temp ~ Solar.R + I(Solar.R^2), data = airq) # modelo de regresion cuadratica
+```
 
+```{r mod-cuad-param}
 mod2 %>% tidy()
 mod2 %>% model_parameters()
+```
 
+```{r mod-cuad-fit}
 mod2 %>% glance()
 mod2 %>% model_performance()
+```
 
+```{r mod-cuad-cv}
 sjstats::cv(mod2) # cv
+```
 
-# graficos diagnostico
+```{r mod-cuad-gts}
+tbl_regression(mod2,
+               estimate_fun = purrr::partial(style_sigfig, digits = 3),
+               pvalue_fun = ~papaja::printp(.x, digits = 3)) %>%
+  modify_header(list(label ~ "",estimate ~ "**Coeficiente**",
+                     p.value ~ "**valor-p**")) %>% 
+  add_glance_source_note(glance_fun = performance::model_performance,
+                         include = c(R2,R2_adjusted,RMSE,Sigma,AIC))
+```
+
+Graficos diagnostico
+
+```{r mod-check-2}
 # plot(mod2) 
 check_model(mod2,panel=F)
 ```
 
 ### Compara modelos
 
-```{r}
+```{r comp-mod1}
 TMod(mod1,mod2) # DescTools
+```
 
-modelsummary::modelsummary(list(Lineal=mod1,Cuadratico=mod2),
-                           statistic = NULL, # 'conf.int',
-                           coef_omit = NULL, # 'Int'
-                           stars = F,
-                           fmt = 4)
+```{r comp-mod2}
+modelsummary(list(Lineal=mod1,Cuadratico=mod2),
+             title = 'Comparasion de modelos',
+             statistic = NULL, # 'conf.int',
+             coef_omit = NULL, # 'Int'
+             gof_omit = '^(?!R|Num|A)',
+             stars = F,
+             fmt = 4)
+```
 
+```{r comp-mod3}
 sjPlot::tab_model(mod1,mod2,
                   title = 'Comparasion de modelos',
                   show.std = NULL, # 'std', NULL
                   show.intercept = T,
                   show.ci = F, # .95
                   collapse.ci = F,
-                  ci.hyphen = ' , ',
+                  ci.hyphen = ', ',
                   show.stat = F,
                   show.p = F,
                   show.aic = T,
                   dv.labels = c('Lineal','Cuadrático'),
-                  digits = 4)
+                  digits = 4,
+                  file = 'sjplot_models_lab3.doc')
+```
 
+```{r comp-mod4}
 comp.mods = compare_performance(mod1,mod2,rank = T) # performance
 comp.mods
 plot(comp.mods)
@@ -197,24 +320,32 @@ plot(comp.mods)
 
 Para agregar lineas de tendencia en *ggplot2* se usa la funcion `geom_smooth`. Por defecto ajusta una curva loess, pero para cambiarlo se usa `method = 'lm'`, y para especificar una ecuacion diferente a la regresion simple se usa `formula`, donde `y` y `x` son genericos, **NO** hay que poner el nombre de las variables que se esta graficando.
 
-```{r}
+```{r dispersion}
 ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point()
+```
 
+```{r regresion-suavizada}
 ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
   geom_smooth()
+```
 
+```{r regresion-lin}
 # grafico regresion lineal
 ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
   geom_smooth(method = 'lm')
+```
 
+```{r regresion-cuad}
 # grafico regresion cuadratica
 ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
   geom_smooth(method = 'lm', formula = y~poly(x, 2))
+```
 
+```{r regresion-lin-cuad}
 # grafico regresion lineal y cuadratica
 ggplot(airq, aes(Solar.R,Temp)) + 
   geom_point() + 
@@ -224,10 +355,9 @@ ggplot(airq, aes(Solar.R,Temp)) +
   scale_color_brewer('Modelo',palette = 'Dark2')
 ```
 
-
 # Probabilidad
 
-```{r}
+```{r prob}
 A = matrix(data = c(15,24,23,14,11,13),nrow = 2)
 colnames(A) = c('A','B','C')
 row.names(A) = c('X','Y')
